// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRadio renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
      >
        <div
          class="text-[1rem] [&+&]:mt-4"
          data-field-has-error="false"
        >
          <label
            class="block leading-[1em] mb-[0.5em] text-graphite"
            for="color"
          >
            <span
              class="text-[0.875rem]"
            >
              What's your favorite color?
               (optional)
            </span>
          </label>
          <div
            class="MuiFormGroup-root"
            id="color"
            role="radiogroup"
            type="radio"
          >
            <div
              class="box-border flex w-full flex-col flex-wrap items-start justify-start mt-0 mb-0"
            >
              <div
                class="box-border m-0 leading-none [&&]:pt-0 [&&]:pb-0"
              >
                <label
                  class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input"
                        name="color"
                        type="radio"
                        value="#ed143d"
                      />
                      <div
                        class="Radio-uncheckedIcon"
                      />
                    </span>
                  </span>
                  <span
                    class="inline-block leading-[1em] mb-0 text-graphite PicassoFormControlLabel-label Radio-label"
                  >
                    <span
                      class="align-top text-[0.8125rem]"
                    >
                      Crimson
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="box-border m-0 leading-none [&&]:pt-0 [&&]:pb-0"
              >
                <label
                  class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel PrivateSwitchBase-checked Mui-checked"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        checked=""
                        class="PrivateSwitchBase-input"
                        name="color"
                        type="radio"
                        value="#ffe4b5"
                      />
                      <div
                        class="Radio-checkedIcon"
                      />
                    </span>
                  </span>
                  <span
                    class="inline-block leading-[1em] mb-0 text-graphite PicassoFormControlLabel-label Radio-label"
                  >
                    <span
                      class="align-top text-[0.8125rem]"
                    >
                      Moccasin
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`FormRadio required with asterisk 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
      >
        <div
          class="text-[1rem] [&+&]:mt-4"
          data-field-has-error="false"
        >
          <label
            class="block leading-[1em] mb-[0.5em] text-graphite"
            for="color"
          >
            <span
              class="text-[0.875rem]"
            >
              <span
                class="align-top text-red mr-[0.3125em]"
              >
                *
              </span>
              What's your favorite color?
            </span>
          </label>
          <div
            class="MuiFormGroup-root"
            id="color"
            role="radiogroup"
            type="radio"
          >
            <div
              class="box-border flex w-full flex-col flex-wrap items-start justify-start mt-0 mb-0"
            >
              <div
                class="box-border m-0 leading-none [&&]:pt-0 [&&]:pb-0"
              >
                <label
                  class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input"
                        name="color"
                        type="radio"
                        value="#ed143d"
                      />
                      <div
                        class="Radio-uncheckedIcon"
                      />
                    </span>
                  </span>
                  <span
                    class="inline-block leading-[1em] mb-0 text-graphite PicassoFormControlLabel-label Radio-label"
                  >
                    <span
                      class="align-top text-[0.8125rem]"
                    >
                      Crimson
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="box-border m-0 leading-none [&&]:pt-0 [&&]:pb-0"
              >
                <label
                  class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel PrivateSwitchBase-checked Mui-checked"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        checked=""
                        class="PrivateSwitchBase-input"
                        name="color"
                        type="radio"
                        value="#ffe4b5"
                      />
                      <div
                        class="Radio-checkedIcon"
                      />
                    </span>
                  </span>
                  <span
                    class="inline-block leading-[1em] mb-0 text-graphite PicassoFormControlLabel-label Radio-label"
                  >
                    <span
                      class="align-top text-[0.8125rem]"
                    >
                      Moccasin
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
